charts/service-webapp.yml
apiVersion: v1
kind: Service
metadata:
  name: service-webapp
spec:
  type: NodePort
  selector:
    app: simples-webapp
  ports:
    -
      protocol: TCP
      port: 8085
      nodePort: 30001
      targetPort: porta-webapp
