charts/ingress-webapp.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - my-app.example.com
      secretName: ingress-tls
  rules:
    - host: my-app.example.com
      http:
        paths:
          - path: /my-service
            backend:
              serviceName: service-webapp
              servicePort: 80
